<resources>
    <string name="app_name">Facebook News Feed</string>
    <string name="text_subtitle">Jon Snow, born Aegon Targaryen, is the son of Lyanna Stark and Rhaegar Targaryen, the late Prince of Dragonstone. From infancy, Jon is presented as the bastard son of Lord Eddard Stark, Lyanna\'s brother, and raised alongside his lawful children at Winterfell, the seat of House Stark. However, his true parentage is kept secret from everyone, including Jon himself, in order to protect him from those that sought the complete annihilation of House Targaryen after Robert\'s Rebellion and to maintain order in the realm.</string>
    <string name="text_sutitle_post">Jon Snow, born Aegon Targaryen, is the son of Lyanna Stark and Rhaegar Targaryen, the late Prince of Dragonstone</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="share">share</string>
    <string name="search">search</string>
</resources>